# MorgenMCP

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/plans/: 2026-03-19-task-cache-design.md
morgenmcp/: __init__.py  client.py  models.py  resources.py  server.py  setup_dev.py  validators.py
morgenmcp/tools/: __init__.py  accounts.py  calendars.py  events.py  id_registry.py  id_utils.py  tags.py  tasks.py  utils.py
scripts/: setup-dev.sh
tests/: __init__.py  conftest.py  test_client.py  test_id_persistence.py  test_integration.py  test_mcp_server.py  test_models.py  test_resources.py  test_tasks_tags.py  test_tools.py  test_validators.py
