[project]
name = "morgenmcp"
version = "0.1.0"
description = "MCP server for Morgen calendar API"
license = { text = "Apache-2.0" }
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=0.4.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-core>=2.41.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[project.scripts]
morgenmcp = "morgenmcp.server:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
